--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,6 @@ jobs:
       env:
         ANSIBLE_HOST_KEY_CHECKING: "false"
       run: |
-        ansible-playbook -i "frog@frog01.mikr.us:11933" --user ${{ secrets.SERVER_USERNAME }} --private-key <(echo "${{ secrets.SSH_PRIVATE_KEY }}") .github/workflows/deploy_message.yml
+        ansible-playbook -i "${{ secrets.SERVER_IP }}" --user ${{ secrets.SERVER_USERNAME }} --private-key <(echo "${{ secrets.SSH_PRIVATE_KEY }}") .github/workflows/deploy_message.yml
 
       # Upewnij się, że dodałeś SSH_PRIVATE_KEY jako sekret w ustawieniach repozytorium na GitHubie
