--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -25,4 +25,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: docker.io/${{ secrets.DOCKER_USERNAME }}/tradelocker:latest
+          tags: docker.io/${{ secrets.DOCKER_USERNAME }}/tradelocker
