--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag tradelocker:latest
 
+      - name: Debug Docker username
+        run: echo ${{ secrets.DOCKER_USERNAME }}
+
       - name: Tag the Docker image
         run: docker tag tradelocker:latest ${{ secrets.DOCKER_USERNAME }}/tradelocker:latest
 
