--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,10 +14,10 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag tradelocker:latest
+        run: docker build . --file Dockerfile --tag tradelocker
 
       - name: Tag the Docker image
-        run: docker tag tradelocker:latest ${{ secrets.DOCKER_USERNAME }}/tradelocker:latest
+        run: docker tag tradelocker ${{ secrets.DOCKER_USERNAME }}/tradelocker:1.0
 
       - name: Push the Docker image
         run: docker push tradelocker
