--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,9 +11,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Log in to GitHub Container Registry
-        env:
-          CR_PAT: ${{ secrets.GITHUB_TOKEN }}
-        run: echo "${CR_PAT}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag ghcr.io/${{ github.repository_owner }}/tradelocker:latest
