--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ghcr.io/${{ github.repository_owner }}/tradelocker:latest
+        run: docker build . --file Dockerfile --tag ghcr.io/${{ github.repository_owner | toLower }}/tradelocker:latest
 
       - name: Push the Docker image
-        run: docker push ghcr.io/${{ github.repository_owner }}/tradelocker:latest
+        run: docker push ghcr.io/${{ github.repository_owner | toLower }}/tradelocker:latest
