--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,11 +10,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set repository owner to lowercase
+        id: prep
+        run: echo "::set-output name=repository_owner_lower::${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]'
+
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ghcr.io/${{ github.repository_owner | toLower }}/tradelocker:latest
+        run: docker build . --file Dockerfile --tag ghcr.io/${{ steps.prep.outputs.repository_owner_lower }}/tradelocker:latest
 
       - name: Push the Docker image
-        run: docker push ghcr.io/${{ github.repository_owner | toLower }}/tradelocker:latest
+        run: docker push ghcr.io/${{ steps.prep.outputs.repository_owner_lower }}/tradelocker:latest
