--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
         run: echo "::set-output name=repository_owner_lower::${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]'
 
       - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+        run: echo "${{ secrets.PERSONAL_ACCESS_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag ghcr.io/${{ steps.prep.outputs.repository_owner_lower }}/tradelocker:latest
