--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Build and Publish Docker Image
 
 on:
   workflow_dispatch:
@@ -6,23 +6,32 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: Set repository owner to lowercase
-        id: prep
-        run: echo "::set-output name=repository_owner_lower::$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.PERSONAL_ACCESS_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ghcr.io/${{ steps.prep.outputs.repository_owner_lower }}/tradelocker:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository }}/tradelocker:latest
 
-      - name: Push the Docker image
-        run: docker push  ghcr.io/${{ steps.prep.outputs.repository_owner_lower }}/tradelocker:latest 
+      - name: Log out from GitHub Container Registry
+        run: docker logout ghcr.io
+
+
+
+#PERSONAL_ACCESS_TOKEN
 
