--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}/tradelocker:latest
+          tags: ghcr.io/tradelocker/tradelocker:latest
 
       - name: Log out from GitHub Container Registry
         run: docker logout ghcr.io
