--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,13 +15,13 @@ jobs:
 
       - name: Set repository owner to lowercase
         id: prep
-        run: echo "::set-output name=repository_owner_lower::${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]'
+        run: echo "repository_owner_lower=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ghcr.io/${{ steps.prep.outputs.repository_owner_lower }}/tradelocker:latest
+        run: docker build . --file Dockerfile --tag ghcr.io/${{ env.repository_owner_lower }}/tradelocker:latest
 
       - name: Push the Docker image
-        run: docker push ghcr.io/tradelocker/tradelocker:latest
+        run: docker push ghcr.io/${{ env.repository_owner_lower }}/tradelocker:latest
