--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ghcr.io/${{ env.repository_owner_lower }}/tradelocker:latest
+        run: docker build . --file Dockerfile --tag ghcr.io/tradelocker/tradelocker:latest
 
       - name: Push the Docker image
         run: docker push ghcr.io/tradelocker/tradelocker:latest
