--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,24 +4,17 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  dockerloginbuildpush:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set repository owner to lowercase
-        id: prep
-        run: echo "repository_owner_lower=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-
-      - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
-
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ghcr.io/tradelocker/tradelocker:latest
-
-      - name: Push the Docker image
+      - name: login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: tradelocker
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+      - name: create image from repository
+        run: docker build -t ghcr.io/tradelocker/tradelocker .
+      - name: push image to GitHub Container Registry
         run: docker push ghcr.io/tradelocker/tradelocker:latest
