--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,10 +11,10 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: tradelocker
+          username: akinzou
           password: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       - uses: actions/checkout@v2
       - name: create image from repository
-        run: docker build -t ghcr.io/tradelocker/tradelocker:latest .
+        run: docker build -t ghcr.io/akinzou/tradelocker:latest .
       - name: push image to GitHub Container Registry
-        run: docker push ghcr.io/tradelocker/tradelocker:latest
+        run: docker push ghcr.io/akinzou/tradelocker:latest
