--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,6 @@ jobs:
           password: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       - uses: actions/checkout@v2
       - name: create image from repository
-        run: docker build -t ghcr.io/akinzou/tradelocker:latest .
+        run: docker build -t ghcr.io/tradelocker/tradelocker:latest .
       - name: push image to GitHub Container Registry
-        run: docker push ghcr.io/akinzou/tradelocker:latest
+        run: docker push ghcr.io/tradelocker/tradelocker:latest
