--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,10 @@ name: Docker Image CI
 
 on:
   workflow_dispatch:
-
+  workflow_run:
+    workflows: ["Python Package"]
+    types:
+      - completed
 jobs:
   dockerloginbuildpush:
     runs-on: ubuntu-latest
