--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           registry: ghcr.io
           username: akinzou
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.TradeLockerBot }}
       - uses: actions/checkout@v2
       - name: Create image from repository
         run: docker build -t ghcr.io/akinzou/tradelocker_bot:latest .
